add EP user locations
